# matrix

./: .gitignore  Cargo.toml  README.MD
ex00/: Cargo.toml  main.rs  matrix.rs  vector.rs
ex00/src/: main.rs  matrix.rs  vector.rs
ex01/: Cargo.toml
ex01/src/: main.rs  vector.rs
ex02/: Cargo.toml
ex02/src/: main.rs  matrix.rs  vector.rs
ex03/: Cargo.toml
ex03/src/: field.rs  main.rs  vector.rs
ex04/: Cargo.toml
ex04/src/: main.rs  vector.rs
ex05/: Cargo.toml
ex05/src/: main.rs  vector.rs
ex06/: Cargo.toml
ex06/src/: main.rs  vector.rs
ex07/: Cargo.toml
ex07/src/: main.rs  matrix.rs  vector.rs
ex08/: Cargo.toml
ex08/src/: main.rs  matrix.rs
ex09/: Cargo.toml
ex09/src/: main.rs  matrix.rs
ex10/: Cargo.toml
ex10/src/: field.rs  main.rs  matrix.rs
ex11/: Cargo.toml
ex11/src/: main.rs  matrix.rs  vector.rs
ex12/: Cargo.toml
ex12/src/: main.rs  matrix.rs
ex13/: Cargo.toml
ex13/src/: main.rs  matrix.rs
ex14/: Cargo.toml
ex14/src/: field.rs  main.rs  matrix.rs  vector.rs
src/: main.rs
